--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format:prettier": "npx prettier src --write"
   },
   "dependencies": {
     "next": "15.4.2",
@@ -22,8 +23,10 @@
     "@types/react-dom": "^19",
     "eslint": "^9.31.0",
     "eslint-config-next": "15.4.2",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.3.0",
+    "prettier": "3.6.2",
     "tailwindcss": "^4",
     "typescript": "^5",
     "typescript-eslint": "^8.37.0"
